crates/alef-backend-jni/tests/snapshots/gen_shims_test__snapshot_demo_lib_rs.snap
---
source: crates/alef-backend-jni/tests/gen_shims_test.rs
expression: "&lib.content"
---
// Generated by alef. Do not edit by hand.
//
// JNI shim for the Android AAR.  Every `pub unsafe extern "system" fn`
// here matches one `external fun native*` in the paired Kotlin Bridge object.

#![allow(non_snake_case)]
#![allow(clippy::too_many_arguments)]

use jni::JNIEnv;
use jni::objects::{JClass, JString};
use jni::sys::{jboolean, jbyte, jdouble, jfloat, jint, jlong, jshort};
use demo;

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeNewClient(
    mut env: JNIEnv,
    _class: JClass,
    api_key: JString,
) -> jni::sys::jobject {
    todo!("JNI shim body"); #[allow(unreachable_code)] std::ptr::null_mut()
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeDemoClientCreate(
    mut env: JNIEnv,
    _class: JClass,
    handle: jlong,
    request_json: JString,
) -> jni::sys::jobject {
    todo!("JNI shim body"); #[allow(unreachable_code)] std::ptr::null_mut()
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeDemoClientPing(
    mut env: JNIEnv,
    _class: JClass,
    handle: jlong,
) -> jboolean {
    todo!("JNI shim body"); #[allow(unreachable_code)] 0u8
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeFreeDemoClient(
    _env: JNIEnv,
    _class: JClass,
    handle: jlong,
) {
    // SAFETY: `handle` was allocated by the matching constructor shim and
    // ownership is transferred back here for drop.
    let _ = handle; // TODO: drop(Box::from_raw(handle as *mut _));
}
