crates/alef-backend-jni/tests/snapshots/gen_shims_test__snapshot_method_no_params_bool.snap
---
source: crates/alef-backend-jni/tests/gen_shims_test.rs
expression: content
---
// Generated by alef. Do not edit by hand.
//
// JNI shim for the Android AAR.  Every `pub unsafe extern "system" fn`
// here matches one `external fun native*` in the paired Kotlin Bridge object.

#![allow(non_snake_case)]
#![allow(clippy::too_many_arguments)]
#![allow(clippy::missing_safety_doc)]
#![allow(unused_imports)]
#![allow(unused_variables)]
#![allow(unused_mut)]
#![allow(dead_code)]
#![allow(clippy::let_unit_value)]
#![allow(clippy::unused_unit)]

use std::sync::OnceLock;
use std::sync::Mutex;
use futures_util::stream::BoxStream;
use futures_util::StreamExt;
use jni::{Env, JNIEnv};
use jni::objects::{JClass, JObject, JString};
use jni::sys::{jboolean, jbyteArray, jlong, jstring};
use tokio::runtime::Runtime;

use demo as core_crate;
use core_crate::*; // bring trait methods into scope

const ERROR_CLASS: &str = "dev/kreuzberg/demo/DemoBridgeException";

fn runtime() -> &'static Runtime {
    static RT: OnceLock<Runtime> = OnceLock::new();
    RT.get_or_init(|| Runtime::new().expect("create tokio runtime"))
}

fn jstring_to_string(env: &mut Env<'_>, s: JString) -> std::result::Result<String, jni::errors::Error> {
    let jstr = env.get_string(&s)?;
    Ok(jstr.into())
}

fn string_to_jstring(env: &mut Env<'_>, s: &str) -> jstring {
    match env.new_string(s) {
        Ok(o) => o.into_raw(),
        Err(_) => std::ptr::null_mut(),
    }
}

fn throw_jni_error(env: &mut Env<'_>, msg: &str) {
    // If the error class cannot be found (misconfigured AAR), fall back to a
    // generic RuntimeException so the caller always gets *some* exception rather
    // than a silent null/zero return that looks like a valid result.
    if env.throw_new(ERROR_CLASS, msg).is_err() {
        let _ = env.throw_new("java/lang/RuntimeException", msg);
    }
}

fn run_or_throw<T, F>(env: &mut Env<'_>, f: F) -> Option<T>
where
    F: FnOnce() -> T + std::panic::UnwindSafe,
{
    match std::panic::catch_unwind(f) {
        Ok(v) => Some(v),
        Err(payload) => {
            let msg = payload.downcast_ref::<String>().cloned()
                .or_else(|| payload.downcast_ref::<&str>().map(|s| (*s).to_string()))
                .unwrap_or_else(|| "panic in native code".to_string());
            throw_jni_error(env, &format!("native panic: {msg}"));
            None
        }
    }
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeCreateClient(
    mut env: JNIEnv,
    _class: JClass,
    api_key: JString,
) -> jlong {
    env.with_env(|env| -> jlong {
    let api_key = match jstring_to_string(env, api_key) {
        Ok(s) => s,
        Err(e) => { throw_jni_error(env, &format!("{e}")); return 0; }
    };
    let Some(result) = run_or_throw(env, std::panic::AssertUnwindSafe(|| runtime().block_on(core_crate::create_client(api_key)))) else {
        return 0;
    };
    match result {
        Err(e) => {
            throw_jni_error(env, &format!("{e}"));
            0
        }
        Ok(v) => {
            Box::into_raw(Box::new(v)) as jlong
        }
    }
    })
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeDemoClientDoThing(
    mut env: JNIEnv,
    _class: JClass,
    handle: jlong,
    request_json: JString,
) -> jstring {
    env.with_env(|env| -> jstring {
    // SAFETY: handle was allocated by the matching constructor shim and remains
    // valid until nativeFree is called. The Kotlin AutoCloseable.close() guarantee
    // ensures the handle outlives this call.
    let client: &core_crate::DemoClient = unsafe { &*(handle as *const core_crate::DemoClient) };
    let req_str = match jstring_to_string(env, request_json) {
        Ok(s) => s,
        Err(e) => { throw_jni_error(env, &format!("{e}")); return std::ptr::null_mut(); }
    };
    let input: String = match serde_json::from_str(&req_str) {
        Ok(s) => s,
        Err(_) => req_str,
    };
    let Some(v) = run_or_throw(env, std::panic::AssertUnwindSafe(|| runtime().block_on(client.do_thing(input)))) else {
        return std::ptr::null_mut();
    };
    let s = match serde_json::to_string(&v) {
        Ok(s) => s,
        Err(e) => { throw_jni_error(env, &format!("serialize: {e}")); return std::ptr::null_mut(); }
    };
    string_to_jstring(env, &s)
    })
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeDemoClientPing(
    mut env: JNIEnv,
    _class: JClass,
    handle: jlong,
) -> jboolean {
    env.with_env(|env| -> jboolean {
    // SAFETY: handle was allocated by the matching constructor shim and remains
    // valid until nativeFree is called. The Kotlin AutoCloseable.close() guarantee
    // ensures the handle outlives this call.
    let client: &core_crate::DemoClient = unsafe { &*(handle as *const core_crate::DemoClient) };
    let Some(v) = run_or_throw(env, std::panic::AssertUnwindSafe(|| runtime().block_on(client.ping()))) else {
        return 0u8;
    };
    v as jboolean
    })
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeDemoClientFetchBlob(
    mut env: JNIEnv,
    _class: JClass,
    handle: jlong,
) -> jbyteArray {
    env.with_env(|env| -> jbyteArray {
    // SAFETY: handle was allocated by the matching constructor shim and remains
    // valid until nativeFree is called. The Kotlin AutoCloseable.close() guarantee
    // ensures the handle outlives this call.
    let client: &core_crate::DemoClient = unsafe { &*(handle as *const core_crate::DemoClient) };
    let Some(v) = run_or_throw(env, std::panic::AssertUnwindSafe(|| runtime().block_on(client.fetch_blob()))) else {
        return std::ptr::null_mut();
    };
    match env.byte_array_from_slice(&v) {
        Ok(arr) => { use jni::objects::JObject; JObject::from(arr).into_raw() as jbyteArray }
        Err(_) => std::ptr::null_mut(),
    }
    })
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeFreeDemoClient(
    _env: JNIEnv,
    _class: JClass,
    handle: jlong,
) {
    if handle == 0 { return; }
    // SAFETY: `handle` was allocated by the matching constructor shim and
    // ownership is transferred back here for drop via Box::from_raw.
    unsafe { let _ = Box::from_raw(handle as *mut core_crate::DemoClient); }
}
