crates/alef-backend-jni/tests/snapshots/gen_shims_test__snapshot_method_with_param.snap
---
source: crates/alef-backend-jni/tests/gen_shims_test.rs
expression: content
---
// Generated by alef. Do not edit by hand.
//
// JNI shim for the Android AAR.  Every `pub unsafe extern "system" fn`
// here matches one `external fun native*` in the paired Kotlin Bridge object.

#![allow(non_snake_case)]
#![allow(clippy::too_many_arguments)]
#![allow(clippy::missing_safety_doc)]
#![allow(unused_imports)]
#![allow(unused_variables)]
#![allow(unused_mut)]
#![allow(dead_code)]

use std::sync::OnceLock;
use std::sync::Mutex;
use futures_util::stream::BoxStream;
use futures_util::StreamExt;
use jni::JNIEnv;
use jni::objects::{JClass, JObject, JString};
use jni::sys::{jboolean, jbyteArray, jlong, jstring};
use tokio::runtime::Runtime;

use demo as core_crate;
use core_crate::*; // bring trait methods into scope

const ERROR_CLASS: &str = "dev/kreuzberg/demo/DemoBridgeException";

fn runtime() -> &'static Runtime {
    static RT: OnceLock<Runtime> = OnceLock::new();
    RT.get_or_init(|| Runtime::new().expect("create tokio runtime"))
}

fn jstring_to_string(env: &mut JNIEnv, s: JString) -> std::result::Result<String, jni::errors::Error> {
    let jstr = env.get_string(&s)?;
    Ok(jstr.into())
}

fn string_to_jstring(env: &mut JNIEnv, s: &str) -> jstring {
    match env.new_string(s) {
        Ok(o) => o.into_raw(),
        Err(_) => std::ptr::null_mut(),
    }
}

fn throw_jni_error(env: &mut JNIEnv, msg: &str) {
    let _ = env.throw_new(ERROR_CLASS, msg);
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeCreateClient(
    mut env: JNIEnv,
    _class: JClass,
    api_key: JString,
) -> jlong {
    let api_key = match jstring_to_string(&mut env, api_key) {
        Ok(s) => s,
        Err(e) => { throw_jni_error(&mut env, &format!("{e}")); return 0; }
    };
    let result = runtime().block_on(core_crate::create_client(api_key));
    match result {
        Err(e) => {
            throw_jni_error(&mut env, &format!("{e}"));
            0
        }
        Ok(v) => {
            Box::into_raw(Box::new(v)) as jlong
        }
    }
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeDemoClientDoThing(
    mut env: JNIEnv,
    _class: JClass,
    handle: jlong,
    request_json: JString,
) -> jstring {
    // SAFETY: handle was allocated by the matching constructor shim and remains
    // valid until nativeFree is called. The Kotlin AutoCloseable.close() guarantee
    // ensures the handle outlives this call.
    let client: &core_crate::DemoClient = unsafe { &*(handle as *const core_crate::DemoClient) };
    let req_str = match jstring_to_string(&mut env, request_json) {
        Ok(s) => s,
        Err(e) => { throw_jni_error(&mut env, &format!("{e}")); return std::ptr::null_mut(); }
    };
    let input: String = match serde_json::from_str(&req_str) {
        Ok(s) => s,
        Err(_) => req_str,
    };
    let v = runtime().block_on(client.do_thing(input));
    let s = match serde_json::to_string(&v) {
        Ok(s) => s,
        Err(e) => { throw_jni_error(&mut env, &format!("serialize: {e}")); return std::ptr::null_mut(); }
    };
    string_to_jstring(&mut env, &s)
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeDemoClientPing(
    mut env: JNIEnv,
    _class: JClass,
    handle: jlong,
) -> jboolean {
    // SAFETY: handle was allocated by the matching constructor shim and remains
    // valid until nativeFree is called. The Kotlin AutoCloseable.close() guarantee
    // ensures the handle outlives this call.
    let client: &core_crate::DemoClient = unsafe { &*(handle as *const core_crate::DemoClient) };
    let v = runtime().block_on(client.ping());
    v as jboolean
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeDemoClientFetchBlob(
    mut env: JNIEnv,
    _class: JClass,
    handle: jlong,
) -> jbyteArray {
    // SAFETY: handle was allocated by the matching constructor shim and remains
    // valid until nativeFree is called. The Kotlin AutoCloseable.close() guarantee
    // ensures the handle outlives this call.
    let client: &core_crate::DemoClient = unsafe { &*(handle as *const core_crate::DemoClient) };
    let v = runtime().block_on(client.fetch_blob());
    match env.byte_array_from_slice(&v) {
        Ok(arr) => { use jni::objects::JObject; JObject::from(arr).into_raw() as jbyteArray }
        Err(_) => std::ptr::null_mut(),
    }
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeFreeDemoClient(
    _env: JNIEnv,
    _class: JClass,
    handle: jlong,
) {
    if handle == 0 { return; }
    // SAFETY: `handle` was allocated by the matching constructor shim and
    // ownership is transferred back here for drop via Box::from_raw.
    unsafe { let _ = Box::from_raw(handle as *mut core_crate::DemoClient); }
}
